--- a/netflix.html
+++ b/netflix.html
@@ -79,13 +79,20 @@
     <div class="faqs">
       <div class="box7">
         <div class="heading">Frequently Asked Questions</div>
-        <div class="container">What is Netflix?</div>
-        <div class="container">How much does Netflix cost?</div>
-        <div class="container">Where can I watch?</div>
-        <div class="container">How do I cancle?</div>
-        <div class="container">What can I watch on Netflix?</div>
-        <div class="container">Is Netflix good for kids?</div>
+        <div class="container">What is Netflix? <img src="plus.svg" alt=""></div>
+        <div class="container">How much does Netflix cost? <img src="plus.svg" alt=""></div>
+        <div class="container">Where can I watch? <img src="plus.svg" alt=""></div>
+        <div class="container">How do I cancle? <img src="plus.svg" alt=""></div>
+        <div class="container">What can I watch on Netflix? <img src="plus.svg" alt=""></div>
+        <div class="container">Is Netflix good for kids? <img src="plus.svg" alt=""></div>
+        <div>Ready to watch? Enter your email to create or restart your membership.</div>
+         <div class="input2">
+          <input type="text" placeholder="Email address" />
+          <button>Get Started ></button>
+        </div>
+      </div>
       </div>
     </div>
+    <div class="line"></div>
   </body>
 </html>
