--- a/netflix.html
+++ b/netflix.html
@@ -37,6 +37,7 @@
         <span>Chromecast, Apple TV, Blu-ray players, and</span>
         <span> more.</span>
         <img src="tv.png" alt="" />
+        <video src="vid.m4v"  autoplay loop muted></video>
       </div>
     </div>
     <div class="line"></div>
@@ -94,5 +95,28 @@
       </div>
     </div>
     <div class="line"></div>
+    <div class="box2">
+      <div class="box8">
+        <a href="Questions? Contact us.">Questions? Contact us.</a>
+        <div class="grid">
+          <a href="fAQ">fAQ</a>
+          <a href="Help Center">Help Center</a>
+          <a href="Account">Account</a>
+          <a href="Media Center">Media Center</a>
+          <a href="Invester Relations">Invester Relations</a>
+          <a href="Jobs">Jobs</a>
+          <a href="Ways to Watch">Ways to Watch</a>
+          <a href="Terms of Use">Terms of Use</a>
+          <a href="Privacy">Privacy</a>
+          <a href="Cookie Preferences">Cookie Preferences</a>
+          <a href="Corporate Information">Corporate Information</a>
+          <a href="Contact Us">Contact Us</a>
+          <a href="Speed Test">Speed Test</a>
+          <a href="Legal Notices">Legal Notices</a>
+          <a href="Only on Netflix">Only on Netflix</a>
+         
+        </div>
+      </div>
+    </div>
   </body>
 </html>
